--- a/tutorial/tutoriais-3-0.html
+++ b/tutorial/tutoriais-3-0.html
@@ -223,7 +223,7 @@
     </tr>
     <tr>
       <td>Status da Transação</td>
-      <td><strong>Cancelado</strong> - Transação cancelada pelo lojista<strong>Estornado</strong> - Transações canceladas com menos de 24 horas<strong>Não Autorizado</strong> - Transações negadas pelo Autorizador Cielo<strong>Não Pago</strong> - Transações autorizadas, mas não capturadas<strong>Pago</strong> - Transações capturadas</td>
+      <td><strong>Cancelado</strong> - Transação cancelada pelo lojista<br /><strong>Estornado</strong> - Transações canceladas com menos de 24 horas<br /><strong>Não Autorizado</strong> - Transações negadas pelo Autorizador Cielo<br /><strong>Não Pago</strong> - Transações autorizadas, mas não capturadas<br /><strong>Pago</strong> - Transações capturadas<br /></td>
       <td> </td>
     </tr>
   </tbody>
@@ -397,6 +397,7 @@
             }).data("toc-tocify");
 
             $('ul').prev('li').addClass('has-subitens');
+            
             $(window).scroll(function () {
                 if ($('li.active').closest('.tocify-header') !== openedHeader) {
                     $('li.is-open').removeClass('is-open');
